2007-11-01  Brian Granger <ellisonbg@gmail.com>

	* iplib.py, rlineimpl.py: Applied Body Water's patches to get IPython
	working with OS X 10.5 libedit implementation of readline.

2007-10-24  Ville Vainio  <vivainio@gmail.com>

	* iplib.py(user_setup): To route around buggy installations where
	UserConfig is not available, create a minimal _ipython.

2007-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/OInspect.py (Inspector.pinfo): fix bug that could arise
	when querying objects with no __class__ attribute (such as
	f2py-generated modules).

2007-10-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_time): track compilation time and report
	it if longer than 0.1s (fix done to %time and %timeit).  After a
	SAGE bug report: http://trac.sagemath.org/sage_trac/ticket/632.

2007-09-18  Ville Vainio  <vivainio@gmail.com>

	* genutils.py(make_quoted_expr): Do not use Itpl, it does
        not support unicode at the moment. Fixes (many) magic calls with
        special characters.

2007-09-14  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/genutils.py (doctest_reload): expose the doctest
	reloader to the user so that people can easily reset doctest while
	using it interactively.  Fixes a problem reported by Jorgen.

	* IPython/iplib.py (InteractiveShell.__init__): protect the
	FakeModule instances used for __main__ in %run calls from
	deletion, so that user code defined in them isn't left with
	dangling references due to the Python module deletion machinery.
	This should fix the problems reported by Darren.

2007-09-10  Darren Dale  <dd55@cornell.edu>

        * Cleanup of IPShellQt and IPShellQt4

2007-09-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/FakeModule.py (FakeModule.__init__): further fixes for
	doctest support.  

	* IPython/iplib.py (safe_execfile): minor docstring improvements.

2007-09-08  Ville Vainio  <vivainio@gmail.com>
