@@ -586,8 +586,8 @@ class CachedOutput:
         if self.do_full_cache:
             new_result = '_'+`self.prompt_count`
             to_main[new_result] = arg
-        self.user_ns.update(to_main)
-        self.user_ns['_oh'][self.prompt_count] = arg
+            self.user_ns.update(to_main)
+            self.user_ns['_oh'][self.prompt_count] = arg
 
     def flush(self):
         if not self.do_full_cache:
