@@ -1,3 +1,8 @@
+2007-16-6  Ville Vainio  <vivainio@gmail.com>
+
+	* Prompts.py: Do not update _oh and _123 when do_full_cache is not
+	true. Closes #194.
+
 2007-11-01  Brian Granger <ellisonbg@gmail.com>
 
 	* iplib.py, rlineimpl.py: Applied Body Water's patches to get IPython
